--- a/src/main/resources/templates/sample/ex2.html
+++ b/src/main/resources/templates/sample/ex2.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .target{
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
   <ul>
@@ -10,7 +15,16 @@
 <!--      [[${dto}]]-->
 <!--    </li>-->
 
-      <li th:each="dto, state : ${list}" th:text="${dto.sno % 5 == 0}?${dto.sno}:${dto.first}"></li></li>
+<!--      <li th:each="dto, state : ${list}" th:text="${dto.sno % 5 == 0}?${dto.sno}:${dto.first}"></li></li>-->
+<!--        <li th:each="dto: ${list}" th:class="${dto.sno % 2 == 0}?'target'" th:text = "${dto}">-->
+           <th:block th:each="dto: ${list}">
+               <li th:text="${dto.sno % 5 == 0}?${dto.sno}:${dto.first}"></li>
+
+           </th:block>
+
+
+        </li>
   </ul>
+
 </body>
 </html>
